# pypostal

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  build-wheels.sh  dev-requirements.txt  prebuild_dependencies_roadmap.md  pyproject.toml  setup.py  test-wheels.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  build_lint.yml  build_wheels.yml  build_wheels_linux.yml  build_wheels_macos.yml  codeql-analysis.yml  diagnose_caches.yml
libpostal-image/: Dockerfile  install-libpostal.sh
postal/: __init__.py  dedupe.py  expand.py  lang_classifier.py  near_dupe.py  normalize.py  parser.py  pydedupe.c  pyexpand.c  pylangclassifier.c  pyneardupe.c  pynormalize.c  pyparser.c  pytokenize.c  pytokentypes.c  token_types.py
postal/tests/: test_expand.py  test_lang_classifier.py  test_parser.py
postal/utils/: download_data.py  enum.py
scripts/: test_wheel.py
src/postal/: expand.py  near_dupe.py  pydedupe.c  pyutils.c  pyutils.h  tokenize.py
src/postal/utils/: enum.py
